<resources>
    <string name="app_name">Insta360 SDK</string>
    <string name="pref_stab_cache_frame_num">pref_stab_cache_frame_num</string>
    <string name="pref_real_time_capture_logs">pref_real_time_capture_logs</string>
    <string name="pref_export_log">pref_export_log</string>
    <string name="pref_live_rtmp">pref_live_rtmp</string>
    <string name="pref_live_bind_mobile_network">pref_live_bind_mobile_network</string>
    <string name="pref_custom_surface">pref_custom_surface</string>
    <string name="pref_capture_activity_plane_stitch">pref_capture_activity_plane_stitch</string>
    <string name="pref_performance_monitor">pref_performance_monitor</string>
    <string name="slide_up_full_screen">Slide up to enter fullscreen</string>
    <string name="slide_down_full_screen">Slide down to exit fullscreen</string>
    <string name="dialog_title_remind">Special Reminder</string>
    <string name="dialog_positive_text">Confirm</string>
    <string name="dialog_negative_text">Cancel</string>
    <string name="unrealized">Not implemented</string>
    <string name="picker_apply_text">Apply changes</string>
    <string name="auto">Auto</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="nav_connect">Connect</string>
    <string name="nav_album">Album</string>
    <string name="nav_ability">Features</string>
    <string name="nav_setting">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_failed">Refresh failed</string>
    <string name="text_camera_connect_status">Connection Status:</string>
    <string name="text_camera_model">Camera Model:</string>
    <string name="text_camera_serial">Camera Serial Number:</string>
    <string name="text_camera_fw_version">Firmware Version:</string>
    <string name="text_camera_active_time">Activation Time:</string>
    <string name="text_camera_media_time">Media Time:</string>
    <string name="text_camera_battery_level">Battery Level:</string>
    <string name="text_camera_charge_status">Charging Status:</string>
    <string name="text_camera_charging">Charging</string>
    <string name="text_camera_uncharged">Not Charging</string>
    <string name="text_camera_sd_status">SD Card Status:</string>
    <string name="text_camera_sd_status_enable">Inserted</string>
    <string name="text_camera_sd_status_disable">Not Inserted</string>
    <string name="text_camera_sd_total">Total SD Capacity:</string>
    <string name="text_camera_sd_free">Available SD Capacity:</string>
    <string name="text_camera_connected">Connected to %s</string>
    <string name="text_camera_disconnected">Not Connected</string>
    <string name="text_ble_wakeup_state">Wakeup Ble State: </string>
    <string name="text_ble_wakeup_state_on">ON</string>
    <string name="text_ble_wakeup_state_off">OFF</string>
    <string name="text_ble_wakeup_state_unknown">UNKNOWN</string>
    <string name="text_wakeup">Wakeup</string>
    <string name="text_last_connect_device">Last Device:</string>
    <string name="button_connect_camera_usb">USB Connect</string>
    <string name="button_connect_camera_wifi">Wi-Fi Connect</string>
    <string name="button_scan_device_by_ble">Scan Device</string>
    <string name="button_scanning_device_by_ble">Scanning…</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="button_enter_capture">Enter Capture Page</string>
    <string name="button_connect_only_ble">BLE Only</string>
    <string name="button_connect_wifi">Connect Wi-Fi</string>
    <string name="camera_storage_full_soon">Camera storage almost full</string>
    <string name="camera_battery_charging">Camera is charging, current battery: %d</string>
    <string name="camera_battery_stop_charging">Charging interrupted</string>
    <string name="camera_sd_card_extract">SD card removed</string>
    <string name="camera_sd_card_insert">SD card inserted</string>
    <string name="camera_battery_low">Battery too low</string>
    <string name="toast_ble_scan_failed">Bluetooth scan failed</string>
    <string name="toast_ble_connect_failed">Bluetooth connection failed %d</string>
    <string name="toast_wifi_connect_failed">Wi-Fi connection failed %d</string>
    <string name="toast_usb_connect_failed">USB connection failed %d</string>
    <string name="toast_camera_connected">Camera connected</string>
    <string name="toast_camera_ble_connected">Bluetooth connected</string>
    <string name="toast_no_sd">No SD card</string>
    <string name="toast_permission_request_failed">Authorization failed, some features may not work.</string>
    <string name="toast_permission_request_complete">Authorization complete</string>
    <string name="loading_connecting_ble">Connecting to camera via Bluetooth</string>
    <string name="loading_connecting_wifi">Connecting to camera via Wi-Fi</string>
    <string name="loading_connecting_usb">Connecting to camera via USB</string>
    <string name="capture_init_check_camera_sensor_mode">Checking Dual-Lens 360 Mod</string>
    <string name="capture_init_switch_camera_sensor_mode_failed">Failed to switch Dual-Lens 360 Mod</string>
    <string name="capture_init_fetch_camera_options">Syncing camera parameters</string>
    <string name="capture_init_fetch_camera_options_failed">Failed to sync camera parameters</string>
    <string name="capture_init_init_support_config">Syncing capture configuration file</string>
    <string name="capture_init_init_support_config_failed">Failed to sync capture configuration file</string>
    <string name="capture_opening_preview_stream">Opening preview stream</string>
    <string name="capture_opening_preview_stream_failed">Failed to open preview stream</string>
    <string name="capture_rendering_player">Rendering frame</string>
    <string name="capture_preview_not_supported">Preview is not supported</string>
    <string name="capture_marked">marked</string>
    <string name="capture_mode_switching">Switching capture mode</string>
    <string name="capture_mode_switch_failed">Failed to switch capture mode</string>
    <string name="capture_taking_photo">Taking photo</string>
    <string name="capture_count">%d photos</string>
    <string name="capture_preparing">Preparing</string>
    <string name="capture_stopping">Stopping</string>
    <string name="capture_error">Capture error, code: %d</string>
    <string name="capture_live_rtmp_empty">RTMP URL not set, please configure in settings</string>
    <string name="capture_live_starting">Live streaming starting…</string>
    <string name="capture_live_closing">Live streaming closing…</string>
    <string name="capture_live_start_push">Start pushing stream</string>
    <string name="capture_live_push_error">Streaming error occurred</string>
    <string name="capture_reopen_preview_stream">Reopen preview stream</string>
    <string name="capture_reopen_capture_player_view">Reopen capture player view</string>
    <string name="capture_settings">Capture Settings</string>
    <string name="capture_mode_normal_capture">Photo</string>
    <string name="capture_mode_hdr_capture">HDR Photo</string>
    <string name="capture_mode_star_lapse">Starlapse</string>
    <string name="capture_mode_interval_shooting">Interval</string>
    <string name="capture_mode_night_scene">Night Shot</string>
    <string name="capture_mode_burst">Burst</string>
    <string name="capture_mode_normal_record">Video</string>
    <string name="capture_mode_hdr_record">HDR Video</string>
    <string name="capture_mode_bullet_time">Bullet Time</string>
    <string name="capture_mode_timelapse">Timelapse</string>
    <string name="capture_mode_time_shift">TimeShift</string>
    <string name="capture_mode_looper_recording">Loop Recording</string>
    <string name="capture_mode_live">Live Streaming</string>
    <string name="capture_mode_live_animation">Reframe Live</string>
    <string name="capture_mode_super_record">Pro Video</string>
    <string name="capture_mode_slow_motion">Slow Motion</string>
    <string name="capture_mode_selfie_record">Me Mode</string>
    <string name="capture_mode_pure_record">Purevideo</string>
    <string name="capture_remaining_take_photo">Remaining number of photos taken:%s</string>
    <string name="capture_remaining_record_video">Remaining recording time:%s</string>
    <string name="capture_setting_exposure_name">Exposure</string>
    <string name="capture_setting_ev_name">EV</string>
    <string name="capture_setting_ev_interval_name">EV Interval</string>
    <string name="capture_setting_shutter_name">Shutter (seconds)</string>
    <string name="capture_setting_shutter_mode_name">Shutter</string>
    <string name="capture_setting_iso_name">ISO</string>
    <string name="capture_setting_iso_max_name">Max ISO</string>
    <string name="capture_setting_record_resolution_name">Resolution</string>
    <string name="capture_setting_photo_resolution_name">Resolution</string>
    <string name="capture_setting_wb_name">WB</string>
    <string name="capture_setting_aeb_name">AEB</string>
    <string name="capture_setting_interval_name">Interval Duration</string>
    <string name="capture_setting_gamma_mode_name">Color</string>
    <string name="capture_setting_format_name">Format</string>
    <string name="capture_setting_record_duration_name">Record Duration</string>
    <string name="capture_setting_dark_eis">Low Light Stabilization</string>
    <string name="capture_setting_exposure_isolated">Panorama Isolated Exposure</string>
    <string name="capture_setting_burst_capture_num_name">Number of Burst photos</string>
    <string name="capture_setting_internal_splicing_name">In-camera Stitching</string>
    <string name="capture_setting_hdr_status_name">HDR</string>
    <string name="capture_setting_photo_hdr_type_name">HDR</string>
    <string name="capture_setting_live_bitrate">Bitrate</string>
    <string name="capture_setting_i_log">I-Log</string>
    <string name="capture_setting_latency">Latency</string>
    <string name="capture_setting_accelerate_frequency">Accelerate frequency</string>
    <string name="exposure_auto">Auto</string>
    <string name="exposure_full_auto">Full Auto Exposure</string>
    <string name="exposure_iso">ISO Priority</string>
    <string name="exposure_isolated">Isolated Exposure</string>
    <string name="exposure_manual">Manual</string>
    <string name="exposure_shutter">Shutter Priority</string>
    <string name="shutter_mode_auto">Off</string>
    <string name="shutter_mode_sport">Indoor low-light stability</string>
    <string name="shutter_mode_faster">Ultra Fast</string>
    <string name="capture_setting_gamma_mode_stand">Standard</string>
    <string name="capture_setting_gamma_mode_log">LOG</string>
    <string name="capture_setting_gamma_mode_vivid">Vivid</string>
    <string name="performance_monitor">Performance Monitor</string>
    <string name="performance_monitor_cpu_usage">CPU usage(error 5%~10%):</string>
    <string name="performance_monitor_dmips">DMIPS(error 8%~25%):</string>
    <string name="performance_monitor_ram_usage">RAM usage:</string>
    <string name="osc_support_options">Get Support Options</string>
    <string name="osc_take_picture">Take Picture</string>
    <string name="osc_take_picture_device_stitching">Take Picture (Device Stitching)</string>
    <string name="osc_start_record">Start Record</string>
    <string name="osc_stop_record">Stop Record</string>
    <string name="osc_get_exposure_params">Get Exposure Params</string>
    <string name="osc_switch_front_sensor_capture">Capture Front Sensor</string>
    <string name="osc_switch_rear_sensor_capture">Capture Rear Sensor</string>
    <string name="osc_separated_fisheye_stitch">Separated Fisheye Stitch</string>
    <string name="osc_tips">This function in the demo is only used for OSC debugging. For the specific usage of OSC, please refer to the OSC documentation on Github.</string>
</resources>