<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="#80000000">

    <TextView
        android:id="@+id/tv_performance_monitor"
        style="@style/TextStyle.Main.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/performance_monitor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_performance_monitor" />

    <TextView
        android:id="@+id/tv_cpu_usage"
        style="@style/TextStyle.Main.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="6dp"
        android:text="@string/performance_monitor_cpu_usage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <TextView
        android:id="@+id/tv_cpu_usage_value"
        style="@style/TextStyle.Main.White"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        app:layout_constraintBottom_toBottomOf="@+id/tv_cpu_usage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_cpu_usage"
        app:layout_constraintTop_toTopOf="@+id/tv_cpu_usage" />

    <TextView
        android:id="@+id/tv_dmips_usage"
        style="@style/TextStyle.Main.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="6dp"
        android:text="@string/performance_monitor_dmips"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cpu_usage" />

    <TextView
        android:id="@+id/tv_dmips_value"
        style="@style/TextStyle.Main.White"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        app:layout_constraintBottom_toBottomOf="@+id/tv_dmips_usage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_dmips_usage"
        app:layout_constraintTop_toTopOf="@+id/tv_dmips_usage" />


    <TextView
        android:id="@+id/tv_ram_usage"
        style="@style/TextStyle.Main.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="6dp"
        android:text="@string/performance_monitor_ram_usage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dmips_usage" />

    <TextView
        android:id="@+id/tv_ram_usage_value"
        style="@style/TextStyle.Main.White"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        app:layout_constraintBottom_toBottomOf="@+id/tv_ram_usage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_ram_usage"
        app:layout_constraintTop_toTopOf="@+id/tv_ram_usage" />

</androidx.constraintlayout.widget.ConstraintLayout>